--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ComposeActivity">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tiLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:counterEnabled="true"
+        app:counterMaxLength="140">
 
     <EditText
         android:id="@+id/etCompose"
@@ -19,14 +25,61 @@
         android:hint="@string/what_s_happening"
         android:inputType="textMultiLine"
         android:minLines="5" />
-
+    </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:id="@+id/btnTweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etCompose"
+        android:layout_below="@+id/tiLayout"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:text="@string/tweet" />
+
+<!--    <Button-->
+<!--        android:id="@+id/btnTweet"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginEnd="67dp"-->
+<!--        android:text="@string/tweet" />-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/etCompose"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginStart="-4dp"-->
+<!--        android:layout_marginTop="171dp"-->
+<!--        android:layout_marginEnd="5dp"-->
+<!--        android:ems="10"-->
+<!--        android:gravity="start|top"-->
+<!--        android:hint="@string/what_s_happening"-->
+<!--        android:inputType="textMultiLine"-->
+<!--        android:minLines="5" />-->
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_marginStart="107dp"-->
+<!--        android:layout_marginTop="42dp">-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    <com.google.android.material.textfield.TextInputEditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginStart="-1dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:layout_marginEnd="1dp"-->
+<!--        android:hint="hint"-->
+<!--        android:minLines="5" />-->
+
+
 </RelativeLayout>
