--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -47,4 +47,14 @@
         android:layout_marginBottom="0dp"
         android:layout_toEndOf="@+id/tvScreenName"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/ivEmbeddedImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvBody"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="3dp"
+        tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
