--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -12,49 +12,86 @@
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/tvScreenName"
+        android:id="@+id/tvDisplayName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/ivProfileImage"
-        tools:text="savsrin" />
+        tools:text="@savsrin" />
 
     <TextView
         android:id="@+id/tvBody"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvScreenName"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="2dp"
+        android:layout_below="@+id/tvDisplayName"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:text="TextView"
         tools:text="This is my tweet." />
 
+
     <TextView
-        android:id="@+id/tvRelativeTime"
+        android:id="@+id/tvTimeStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvScreenName"
+        android:layout_alignTop="@id/tvDisplayName"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/tvScreenName"
-        android:text="TextView" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_toEndOf="@+id/tvDisplayName"
+        android:text="10m" />
 
     <ImageView
         android:id="@+id/ivEmbeddedImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvBody"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="3dp"
+        android:layout_alignLeft="@id/tvBody"
+        android:layout_alignRight="@id/tvBody"
+        android:scaleType="fitCenter"
         tools:srcCompat="@tools:sample/avatars" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/tvUsername"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignTop="@id/tvHandle"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_marginStart="82dp"-->
+<!--        android:layout_marginTop="7dp"-->
+<!--        android:layout_marginBottom="11dp"-->
+<!--        android:layout_toStartOf="@+id/tvTimeStamp"-->
+<!--        android:layout_toEndOf="@+id/ivProfileImage"-->
+<!--        android:ellipsize="end"-->
+<!--        android:maxLines="1"-->
+<!--        android:text="TextView"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:text="savsrin" />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/ibRetweet"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentTop="true"-->
+
+<!--        android:layout_marginStart="0dp"-->
+<!--        android:layout_marginTop="195dp"-->
+<!--        android:layout_toEndOf="@+id/ivProfileImage"-->
+<!--        android:backgroundTint="#00FFFFFF"-->
+<!--        android:tint="@color/twitter_blue"-->
+<!--        app:srcCompat="@drawable/ic_vector_retweet_stroke" />-->
+
+
 </RelativeLayout>
