--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,7 @@
         android:icon="@drawable/ic_vector_compose"
         android:title="Compose"
         app:showAsAction="always" />
+<!--        android:iconTint="#FFFFFF"-->
+        app:showAsAction="always" />
+
 </menu>
