--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
 
         android:layout_below="@+id/ivEmbeddedImage"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/ibReply"
         android:backgroundTint="#00FFFFFF"
@@ -96,27 +96,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivEmbeddedImage"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="225dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/ibReply"
         android:backgroundTint="#00FFFFFF"
         android:tint="@color/medium_gray_50"
         app:srcCompat="@drawable/ic_vector_heart_stroke" />
 
+    <TextView
+        android:id="@+id/tvFavCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivEmbeddedImage"
+        android:layout_alignEnd="@+id/ibLike"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toEndOf="@+id/ibLike"
+        android:maxLines="1"
+        android:text="TextView"
+        android:textSize="10sp"
+        tools:text="68" />
 
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/ibRetweet"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentTop="true"-->
+    <!--    <ImageButton-->
+    <!--        android:id="@+id/ibRetweet"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentTop="true"-->
 
-<!--        android:layout_marginStart="0dp"-->
-<!--        android:layout_marginTop="195dp"-->
-<!--        android:layout_toEndOf="@+id/ivProfileImage"-->
-<!--        android:backgroundTint="#00FFFFFF"-->
-<!--        android:tint="@color/twitter_blue"-->
-<!--        app:srcCompat="@drawable/ic_vector_retweet_stroke" />-->
+    <!--        android:layout_marginStart="0dp"-->
+    <!--        android:layout_marginTop="195dp"-->
+    <!--        android:layout_toEndOf="@+id/ivProfileImage"-->
+    <!--        android:backgroundTint="#00FFFFFF"-->
+    <!--        android:tint="@color/twitter_blue"-->
+    <!--        app:srcCompat="@drawable/ic_vector_retweet_stroke" />-->
 
 
 </RelativeLayout>
